--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <meta name="description" content="This website is a parody website of Tesla mainly created for educational purposes and not for scams or frauds. It portrays all likeness and use of real images and data's belonging to tesla. This is not a car sale website.">
     <script async="false" src="./index.js"></script>
     <title>Electric cars, solar, and renewable energy</title>
 </head>
